fix spacing and remove cards

--- a/client/src/Components/Furniture.css
+++ b/client/src/Components/Furniture.css
@@ -7,16 +7,15 @@
   font-size: 3rem;
 }
 
-#bedCard {
+/* #bedCard {
   padding: 5%;
   border-radius: 1.5em;
   cursor: pointer;
-}
+} */
 
 #bedImg {
   width: 350px;
   height: 250px;
-  display: block;
   padding: 5px;
   border-radius: 1.5em;
   box-shadow: 0 4px 6px 0 black;
@@ -24,7 +23,9 @@
 
 .imageContainer {
   position: relative;
-  width: 50%;
+  cursor: pointer;
+  margin-left: 10%;
+  /* width: 50%; */
 }
 
 .overlay {
